# MolSHAP

./: .gitignore  README.md  main.py  pyproject.toml
data/: download_datasets.py
notebooks/: MACCs_explanations.ipynb
src/molshap/: __init__.py  dataset.py  maccs_smarts.py
src/molshap/ressources/: feature_matrix_MACCSKeys.tsv  readme.md
tests/: test_maccs_smarts.py
