[project]
name = "molshap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compchemkit",
    "jupyterlab>=4.4.7",
    "rdkit>=2025.3.6",
    "shap>=0.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
compchemkit = { git = "https://github.com/c-feldmann/compchemkit.git" }
